# ACTORCHESTRA

./: .gitignore  LICENSE  README.md
actl/: .gitignore  README.md  my_spec.txt  my_spec2.txt  waltz.opam
actl/lib/: ast.ml  dune  parser.mly
actl/test/: dune
dissertation/: Makefile  template.alg  template.aux  template.bbl  template.blg  template.fdb_latexmk  template.fls  template.glg  template.ist  template.lof  template.lol  template.run.xml  template.slg  template.toc  template1-blx.aux  template1-blx.bbl  template1-blx.blg
dissertation/Bibliography/: bibliography.bib  save.txt
dissertation/Chapters/: abstract-en.tex  abstract-pt.tex  acknowledgements.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  chapter8.tex  chapter9.tex  dedicatory.tex  quote.tex
dissertation/Config/: 1_novathesis.tex  2_biblatex.tex  3_cover.tex  4_files.tex  5_packages.tex  6_list_of.tex  9_nova_fct.tex
examples/chat/: README.md  chat_room.beam  chat_room.erl  chat_server.beam  chat_server.erl  client.beam  client.erl  client_registry.P  client_registry.beam  client_registry.erl  context_injector.beam  context_injector.erl  monitor.beam  monitor.erl  monitor_log.txt  simple_chat_test.beam  simple_chat_test.erl  simple_wrapper.beam  sub_monitor.beam  sub_monitor.erl  sub_monitor_log.txt
examples/simple_arithmetics/: README.md  client.P  client.beam  client.erl  context_injector.beam  (+13 more)
waltz/: README.md  dune-project  sub_monitor.erl  sub_monitor_1.erl  waltz_monitor.erl
waltz/lib/: ast.ml  expressions.ml  lexer.mll
(+294 files in other folders)
