(lang dune 3.16)

(name waltz)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "vm")

(maintainers "vm")

(license LICENSE)

(documentation https://url/to/documentation)

(using menhir 2.0)

(package
 (name waltz)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
